@startuml
interface CablePlotter {
  +Generate(nodeMass: float, initialPoints: Vector2[], actualLength: float, extraForces: List<(int nodeIndex, Vector2 force)> = null)
  +HidePlot()
  +ShowPlot()
  +GetHidden(): bool
  +GetPlotName(): String
  +GetColor(): Color
  +GetProgress(): float
  +GetFinalPoints(): Vector2[]
}

class RawPlotter {
  +RawPlotter(plotName: String, lineColor: Color)
}
RawPlotter ..|> CablePlotter

class FEMLine {
  +FEMLine(lineColor: Color)
}
FEMLine ..|> CablePlotter

class Coordinator {
  +WorldRootPath: NodePath
  -plotters: List<CablePlotter>
  +GetPlotters(): CablePlotter[]
  +GeneratePlots()
  +SetVisible(index: int, visible: bool)
  +postStatistics(statsDict: Dictionary<String, String>)
  +ResetCamera()
  +Instance: Coordinator
}

Coordinator --> "calls" InitialCurve
Coordinator --> "uses" CablePlotter

class InitialCurve {
  +Make(startPoint: Vector2, endPoint: Vector2, mass: float, arcLength: float, segmentCount: int): Vector2[]
}


class InputControlNode {
  +CoordinatorPath: NodePath
  -coordinator: Coordinator
  -PrepareInput(): void
  +StatisticsCallback(caller: CablePlotter, stats: Dictionary<String, String>)
  +Instance: InputControlNode
}

InputControlNode --> Coordinator
@enduml